added basic semester, needs more work