@@ -5,13 +5,15 @@ import java.util.ArrayList;
 
 public class Student extends Person {
     String studentID;
+    private int credits = 0;
     ArrayList<Course> coursesTaken;
+    Schedule schedule = new Schedule();
 
     public Student(String fName, String lName, String phoneNum, String city, LocalDate dob, String studentID, ArrayList<Course> cT) {
         super(fName, lName, phoneNum, city, dob);
         this.studentID = studentID;
         this.coursesTaken = cT;
-        if (coursesTaken.size() == 1 && coursesTaken.get(0).getName().equals("none"))
+        if (coursesTaken.size() == 1 && coursesTaken.getFirst().getName().equals("none"))
             coursesTaken.clear();
     }
 
@@ -26,12 +28,32 @@ public class Student extends Person {
         return true;
     }
 
+    public void setCredits(int credits) {
+        this.credits = credits;
+    }
+
+    public int getCredits() {
+        return credits;
+    }
+
+    public void setSchedule(Schedule schedule) {
+        this.schedule = schedule;
+    }
+
+    public Schedule getSchedule() {
+        return schedule;
+    }
+
     public ArrayList<Course> getCoursesTaken() {
         return coursesTaken;
     }
 
+    public void addCourse(Course course) {
+        this.getCoursesTaken().add(course);
+    }
+
     @Override
     public String toString() {
-        return super.toString() + " studentID=" + getStudentID() + "\n";
+        return String.format("%s studentID=%s%n", super.toString(), getStudentID());
     }
 }
